# SOC-AI-Analyst

./: .env.example  README.md  deploy-ai-soc.ps1  deploy-ai-soc.sh  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
cortex-integration/: README.md
cortex-integration/analyzers/AI_SOC_IDS/: AI_SOC_IDS.json  README.md  ai_soc_ids.py  requirements.txt
cortex-integration/analyzers/AI_SOC_Triage/: AI_SOC_Triage.json  README.md  ai_soc_triage.py
cortex-integration/responders/AI_SOC_Block_Ticket/: AI_SOC_Block_Ticket.json  README.md  ai_soc_block_ticket.py  requirements.txt
cortex-integration/responders/AI_SOC_Responder/: AI_SOC_Responder.json  README.md  ai_soc_responder.py  d3fend_mapping.py  requirements.txt
datasets/CICIDS2017/: validate_dataset.py
docker-compose/: ai-services.yml  integrated-stack.yml  monitoring-stack.yml  phase1-siem-core.yml  phase2-soar-stack.yml
docs/: WAZUH_INTEGRATION_GUIDE.md
ml_training/: inference_api.py  train_ids_model.py
scripts/: generate_secure_credentials.py
services/alert-triage/: main.py
services/common/: auth.py  pipeline.py
services/correlation-engine/: risk_scorer.py
services/rag-service/: knowledge_base.py
services/response-orchestrator/: Dockerfile  config.py  main.py  models.py  orchestrator.py  requirements.txt
services/wazuh-integration/: config.py  main.py
